force-app/main/default/objects/Opportunity_Product_Line__c/Opportunity_Product_Line__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product Line</label>
    <nameField>
        <displayFormat>OPL-{0000}</displayFormat>
        <label>Opportunity Product Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Product Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>