force-app/main/default/objects/Opportunity_Product_Line__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>The business unit responsible for this product line. Derived automatically from the Product Family selection via Custom Metadata lookup — not editable by users.</description>
    <inlineHelpText>Populated automatically based on the Product Family selected. Contact your admin if the Business Unit appears incorrect.</inlineHelpText>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Unit</valueSetName>
    </valueSet>
</CustomField>