force-app/main/default/objects/Opportunity_Product_Line__c/fields/EAA__c.field-meta.xml
<CustomField>
    <fullName>EAA__c</fullName>
    <description>Eligible / commissionable amount for this product line and BU. Seller estimate at Qualification; auto-populated from CPQ transaction header post-quote.</description>
    <inlineHelpText>Enter the estimated eligible commissionable amount for this product line. At Qualification this is your best estimate — it will be updated automatically from CPQ once a quote is created. Do not enter CPQ line-item totals directly.</inlineHelpText>
    <label>EAA</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>