force-app/main/default/objects/Opportunity_Product_Line__c/fields/EAA_Source__c.field-meta.xml
<CustomField>
    <fullName>EAA_Source__c</fullName>
    <description>Tracks origin of EAA value</description>
    <label>EAA Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seller Estimate</fullName>
            </value>
            <value>
                <fullName>CPQ Derived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>