force-app/main/default/objects/Opportunity_Product_Line__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether this product line is included in deal totals, BU routing, and reporting. Unchecking deactivates without deleting the record.</description>
    <inlineHelpText>Uncheck to deactivate this product line without deleting it. Inactive records are excluded from EAA and TAA totals and will not trigger team routing.</inlineHelpText>
    <label>Active Status</label>
    <type>Checkbox</type>
</CustomField>