force-app/main/default/objects/Opportunity_Product_Line__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System-calculated — set automatically on the Active record with the highest EAA for the Opportunity by the Primary BU Recalculation flow. Not seller-editable. Drives routing, Opp Team population, and reporting.</description>
    <inlineHelpText>System-calculated — cannot be manually edited. Automatically set on the Business Unit line with the highest Eligible Annual Amount for this Opportunity.</inlineHelpText>
    <label>Primary BU</label>
    <type>Checkbox</type>
</CustomField>