force-app/main/default/objects/Opportunity_Product_Line__c/fields/OPL_Sync_Key__c.field-meta.xml
<CustomField>
    <fullName>OPL_Sync_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>OPL Sync Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>