force-app/main/default/objects/Opportunity_Product_Line__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Links this product line record to the parent Opportunity. Controls sharing, rollup eligibility, and cascade delete.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Product Lines</relationshipLabel>
    <relationshipName>Opportunity_Product_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>