force-app/main/default/objects/Opportunity_Product_Line__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Optional, descriptive product grouping within the selected Business Unit. Not required to save a line — Business Unit is the required field on this object.</description>
    <inlineHelpText>Optional. If you know more detail than just the Business Unit, select a Product Family here — choices are filtered to the Business Unit you selected above.</inlineHelpText>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Family</valueSetName>
    </valueSet>
</CustomField>