force-app/main/default/objects/Opportunity_Product_Line__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>The specific product line within the selected Product Family. Optional — used when the seller has enough information to identify a more specific product interest.</description>
    <inlineHelpText>Optional. Select a product line within the chosen Product Family if you have sufficient detail. Leave blank if the deal is not yet scoped to a specific product line.</inlineHelpText>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>