force-app/main/default/objects/Opportunity_Product_Line__c/validationRules/Prevent_Edits_When_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edits_When_Locked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    PRIORVALUE(Is_Locked__c) = TRUE,
    NOT($Permission.Bypass_OPL_Lock)
)</errorConditionFormula>
    <errorMessage>This Opportunity Product Line is locked because the Opportunity is closed and cannot be modified.</errorMessage>
</ValidationRule>